# MedicalCommunicationSimulator

./: MedicalCommunicationSimulator.sln
MedicalCommunicationSimulator/: CMakeLists.txt  MedicalCommunicationSimulator.vcxproj  MedicalCommunicationSimulator.vcxproj.filters  mian.cpp
MedicalCommunicationSimulator/Worker/: NewNotifyWorker.cpp  NewNotifyWorker.h  NewRequestWorker.cpp  NewRequestWorker.h  RequestIdCreator.h  ZmqAddresses.h
MedicalCommunicationSimulator/core/: IMessage.h  IMessageBuilder.h  TemplateMessageBuilder.h
MedicalCommunicationSimulator/factory/: MessageBuilderFactory.cpp  MessageBuilderFactory.h
MedicalCommunicationSimulator/messages/: FileMeta.cpp  FileMeta.h
MedicalCommunicationSimulator/messages/request/: ImmutableFirstTypeRequest.cpp  ImmutableFirstTypeRequest.h  QuerySeriesRequest.cpp  QuerySeriesRequest.h
MedicalCommunicationSimulator/messages/response/: ImmutableFirstTypeResponse.cpp  ImmutableFirstTypeResponse.h
